minor tweak of f1 score print

--- a/7.figures/f1_score_visualization.ipynb
+++ b/7.figures/f1_score_visualization.ipynb
@@ -175,11 +175,126 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "CP_and_DPtest        CPtest        DPtest \n",
+      "           10             4             2 \n"
+     ]
+    },
+    {
      "data": {
-      "text/plain": [
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A grouped_df: 16 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Phenotypic_Class</th><th scope=col>F1_Score</th><th scope=col>data_split</th><th scope=col>shuffled</th><th scope=col>feature_type</th><th scope=col>feature_type_with_data_split</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>ADCCM             </td><td>0.9333333</td><td>test</td><td>False</td><td>DP       </td><td>DPtest       </td></tr>\n",
+       "\t<tr><td>Anaphase          </td><td>0.9285714</td><td>test</td><td>False</td><td>CP_and_DP</td><td>CP_and_DPtest</td></tr>\n",
+       "\t<tr><td>Apoptosis         </td><td>0.9285714</td><td>test</td><td>False</td><td>CP_and_DP</td><td>CP_and_DPtest</td></tr>\n",
+       "\t<tr><td>Binuclear         </td><td>0.7407407</td><td>test</td><td>False</td><td>CP       </td><td>CPtest       </td></tr>\n",
+       "\t<tr><td>Elongated         </td><td>0.9375000</td><td>test</td><td>False</td><td>CP_and_DP</td><td>CP_and_DPtest</td></tr>\n",
+       "\t<tr><td>Grape             </td><td>0.6956522</td><td>test</td><td>False</td><td>CP_and_DP</td><td>CP_and_DPtest</td></tr>\n",
+       "\t<tr><td>Hole              </td><td>0.7741935</td><td>test</td><td>False</td><td>CP       </td><td>CPtest       </td></tr>\n",
+       "\t<tr><td>Interphase        </td><td>0.8503937</td><td>test</td><td>False</td><td>CP       </td><td>CPtest       </td></tr>\n",
+       "\t<tr><td>Large             </td><td>0.7407407</td><td>test</td><td>False</td><td>CP       </td><td>CPtest       </td></tr>\n",
+       "\t<tr><td>Metaphase         </td><td>0.9000000</td><td>test</td><td>False</td><td>CP_and_DP</td><td>CP_and_DPtest</td></tr>\n",
+       "\t<tr><td>MetaphaseAlignment</td><td>0.8076923</td><td>test</td><td>False</td><td>CP_and_DP</td><td>CP_and_DPtest</td></tr>\n",
+       "\t<tr><td>OutOfFocus        </td><td>0.9892473</td><td>test</td><td>False</td><td>DP       </td><td>DPtest       </td></tr>\n",
+       "\t<tr><td>Polylobed         </td><td>0.7747748</td><td>test</td><td>False</td><td>CP_and_DP</td><td>CP_and_DPtest</td></tr>\n",
+       "\t<tr><td>Prometaphase      </td><td>0.8761905</td><td>test</td><td>False</td><td>CP_and_DP</td><td>CP_and_DPtest</td></tr>\n",
+       "\t<tr><td>SmallIrregular    </td><td>0.9056604</td><td>test</td><td>False</td><td>CP_and_DP</td><td>CP_and_DPtest</td></tr>\n",
+       "\t<tr><td>Weighted          </td><td>0.8506438</td><td>test</td><td>False</td><td>CP_and_DP</td><td>CP_and_DPtest</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A grouped\\_df: 16 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " Phenotypic\\_Class & F1\\_Score & data\\_split & shuffled & feature\\_type & feature\\_type\\_with\\_data\\_split\\\\\n",
+       " <chr> & <dbl> & <chr> & <chr> & <chr> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t ADCCM              & 0.9333333 & test & False & DP        & DPtest       \\\\\n",
+       "\t Anaphase           & 0.9285714 & test & False & CP\\_and\\_DP & CP\\_and\\_DPtest\\\\\n",
+       "\t Apoptosis          & 0.9285714 & test & False & CP\\_and\\_DP & CP\\_and\\_DPtest\\\\\n",
+       "\t Binuclear          & 0.7407407 & test & False & CP        & CPtest       \\\\\n",
+       "\t Elongated          & 0.9375000 & test & False & CP\\_and\\_DP & CP\\_and\\_DPtest\\\\\n",
+       "\t Grape              & 0.6956522 & test & False & CP\\_and\\_DP & CP\\_and\\_DPtest\\\\\n",
+       "\t Hole               & 0.7741935 & test & False & CP        & CPtest       \\\\\n",
+       "\t Interphase         & 0.8503937 & test & False & CP        & CPtest       \\\\\n",
+       "\t Large              & 0.7407407 & test & False & CP        & CPtest       \\\\\n",
+       "\t Metaphase          & 0.9000000 & test & False & CP\\_and\\_DP & CP\\_and\\_DPtest\\\\\n",
+       "\t MetaphaseAlignment & 0.8076923 & test & False & CP\\_and\\_DP & CP\\_and\\_DPtest\\\\\n",
+       "\t OutOfFocus         & 0.9892473 & test & False & DP        & DPtest       \\\\\n",
+       "\t Polylobed          & 0.7747748 & test & False & CP\\_and\\_DP & CP\\_and\\_DPtest\\\\\n",
+       "\t Prometaphase       & 0.8761905 & test & False & CP\\_and\\_DP & CP\\_and\\_DPtest\\\\\n",
+       "\t SmallIrregular     & 0.9056604 & test & False & CP\\_and\\_DP & CP\\_and\\_DPtest\\\\\n",
+       "\t Weighted           & 0.8506438 & test & False & CP\\_and\\_DP & CP\\_and\\_DPtest\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
        "\n",
-       "CP_and_DPtest        CPtest        DPtest \n",
-       "           10             4             2 "
+       "A grouped_df: 16 × 6\n",
+       "\n",
+       "| Phenotypic_Class &lt;chr&gt; | F1_Score &lt;dbl&gt; | data_split &lt;chr&gt; | shuffled &lt;chr&gt; | feature_type &lt;chr&gt; | feature_type_with_data_split &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| ADCCM              | 0.9333333 | test | False | DP        | DPtest        |\n",
+       "| Anaphase           | 0.9285714 | test | False | CP_and_DP | CP_and_DPtest |\n",
+       "| Apoptosis          | 0.9285714 | test | False | CP_and_DP | CP_and_DPtest |\n",
+       "| Binuclear          | 0.7407407 | test | False | CP        | CPtest        |\n",
+       "| Elongated          | 0.9375000 | test | False | CP_and_DP | CP_and_DPtest |\n",
+       "| Grape              | 0.6956522 | test | False | CP_and_DP | CP_and_DPtest |\n",
+       "| Hole               | 0.7741935 | test | False | CP        | CPtest        |\n",
+       "| Interphase         | 0.8503937 | test | False | CP        | CPtest        |\n",
+       "| Large              | 0.7407407 | test | False | CP        | CPtest        |\n",
+       "| Metaphase          | 0.9000000 | test | False | CP_and_DP | CP_and_DPtest |\n",
+       "| MetaphaseAlignment | 0.8076923 | test | False | CP_and_DP | CP_and_DPtest |\n",
+       "| OutOfFocus         | 0.9892473 | test | False | DP        | DPtest        |\n",
+       "| Polylobed          | 0.7747748 | test | False | CP_and_DP | CP_and_DPtest |\n",
+       "| Prometaphase       | 0.8761905 | test | False | CP_and_DP | CP_and_DPtest |\n",
+       "| SmallIrregular     | 0.9056604 | test | False | CP_and_DP | CP_and_DPtest |\n",
+       "| Weighted           | 0.8506438 | test | False | CP_and_DP | CP_and_DPtest |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   Phenotypic_Class   F1_Score  data_split shuffled feature_type\n",
+       "1  ADCCM              0.9333333 test       False    DP          \n",
+       "2  Anaphase           0.9285714 test       False    CP_and_DP   \n",
+       "3  Apoptosis          0.9285714 test       False    CP_and_DP   \n",
+       "4  Binuclear          0.7407407 test       False    CP          \n",
+       "5  Elongated          0.9375000 test       False    CP_and_DP   \n",
+       "6  Grape              0.6956522 test       False    CP_and_DP   \n",
+       "7  Hole               0.7741935 test       False    CP          \n",
+       "8  Interphase         0.8503937 test       False    CP          \n",
+       "9  Large              0.7407407 test       False    CP          \n",
+       "10 Metaphase          0.9000000 test       False    CP_and_DP   \n",
+       "11 MetaphaseAlignment 0.8076923 test       False    CP_and_DP   \n",
+       "12 OutOfFocus         0.9892473 test       False    DP          \n",
+       "13 Polylobed          0.7747748 test       False    CP_and_DP   \n",
+       "14 Prometaphase       0.8761905 test       False    CP_and_DP   \n",
+       "15 SmallIrregular     0.9056604 test       False    CP_and_DP   \n",
+       "16 Weighted           0.8506438 test       False    CP_and_DP   \n",
+       "   feature_type_with_data_split\n",
+       "1  DPtest                      \n",
+       "2  CP_and_DPtest               \n",
+       "3  CP_and_DPtest               \n",
+       "4  CPtest                      \n",
+       "5  CP_and_DPtest               \n",
+       "6  CP_and_DPtest               \n",
+       "7  CPtest                      \n",
+       "8  CPtest                      \n",
+       "9  CPtest                      \n",
+       "10 CP_and_DPtest               \n",
+       "11 CP_and_DPtest               \n",
+       "12 DPtest                      \n",
+       "13 CP_and_DPtest               \n",
+       "14 CP_and_DPtest               \n",
+       "15 CP_and_DPtest               \n",
+       "16 CP_and_DPtest               "
       ]
      },
      "metadata": {},
@@ -193,7 +308,9 @@
     "    dplyr::group_by(Phenotypic_Class) %>%\n",
     "    dplyr::slice(1)\n",
     "\n",
-    "table(top_scores_df$feature_type_with_data_split)"
+    "print(table(top_scores_df$feature_type_with_data_split))\n",
+    "\n",
+    "top_scores_df"
    ]
   },
   {
