--- a/2.train_model/train_single_class_models.ipynb
+++ b/2.train_model/train_single_class_models.ipynb
@@ -565,7 +565,7 @@
     "feature_types = [\"CP\", \"DP\", \"CP_and_DP\"]\n",
     "\n",
     "# create stratified data sets for k-fold cross validation\n",
-    "straified_k_folds = StratifiedKFold(n_splits=10, shuffle=False)\\\n",
+    "straified_k_folds = StratifiedKFold(n_splits=10, shuffle=False)\n",
     "\n",
     "# create logistic regression model with following parameters\n",
     "log_reg_model = LogisticRegression(\n",
