get SCM PR curves

--- a/3.evaluate_model/class_PR_curves.ipynb
+++ b/3.evaluate_model/class_PR_curves.ipynb
@@ -45,9 +45,6 @@
     "features_dataframe_path = pathlib.Path(\"../0.download_data/data/labeled_data.csv.gz\")\n",
     "features_dataframe = get_features_data(features_dataframe_path)\n",
     "\n",
-    "train_data = get_dataset(features_dataframe, data_split_indexes, \"train\")\n",
-    "test_data = get_dataset(features_dataframe, data_split_indexes, \"test\")\n",
-    "\n",
     "save_dir = pathlib.Path(\"evaluations/class_precision_recall_curves/\")\n",
     "save_dir.mkdir(parents=True, exist_ok=True)\n"
    ]
@@ -295,7 +292,7 @@
    ],
    "source": [
     "# directory to load the models from\n",
-    "models_dir = pathlib.Path(\"../2.train_model/models/\")\n",
+    "models_dir = pathlib.Path(\"../2.train_model/models/multi_class_models/\")\n",
     "\n",
     "# use a list to keep track of scores in tidy long format for each model and dataset combination\n",
     "compiled_class_PR_curves = []\n",
