--- a/2.train_model/train_single_class_models.ipynb
+++ b/2.train_model/train_single_class_models.ipynb
@@ -1036,7 +1036,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.8.13 ('phenotypic_profiling')",
    "language": "python",
    "name": "python3"
   },
@@ -1050,12 +1050,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "f9df586d1764dbc68785000a153dad1832127ac564b5e2e4c94e83fc43160b30"
    }
   }
  },
