retrain single class models with correct kernel

--- a/3.evaluate_model/class_PR_curves_SCM.ipynb
+++ b/3.evaluate_model/class_PR_curves_SCM.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -227,6 +227,7 @@
     "            single_cell_data[\"Mitocheck_Phenotypic_Class\"] != phenotypic_class,\n",
     "            \"Mitocheck_Phenotypic_Class\",\n",
     "        ] = f\"Not {phenotypic_class}\"\n",
+    "        \n",
     "        # because we downsampled negative labels (to offset large label imbalance) in 2.train_model,\n",
     "        # it is necessary to get the subset of training data that was used to actually train this specific model\n",
     "        if evaluation_type == \"train\":\n",
@@ -278,38 +279,42 @@
     "            precision, recall, thresholds = precision_recall_curve(\n",
     "                y, y_probas[:, index], pos_label=model_class\n",
     "            )\n",
-    "            axs[ax_x + index, ax_y].plot(\n",
-    "                recall, precision, label=color_key, color=plot_color\n",
-    "            )\n",
-    "            # set title and axis labels for subplot\n",
-    "            axs[ax_x + index, ax_y].set_title(model_class)\n",
-    "            axs[ax_x + index, ax_y].set(xlabel=\"Recall\", ylabel=\"Precision\")\n",
+    "            # last values in precision/recall curve don't correspond to cell dataset\n",
+    "            thresholds = np.append(thresholds, None)\n",
+    "            \n",
+    "            # # plot PR data\n",
+    "            # axs[ax_x + index, ax_y].plot(\n",
+    "            #     recall, precision, label=color_key, color=plot_color\n",
+    "            # )\n",
+    "            # # set title and axis labels for subplot\n",
+    "            # axs[ax_x + index, ax_y].set_title(model_class)\n",
+    "            # axs[ax_x + index, ax_y].set(xlabel=\"Recall\", ylabel=\"Precision\")\n",
     "\n",
     "            # add pr data to compiled dataframe\n",
-    "            # PR_data.append(\n",
-    "            #     pd.DataFrame(\n",
-    "            #         {\n",
-    "            #             \"Model_Class\": model_class,\n",
-    "            #             \"PR_Threshold\": thresholds,\n",
-    "            #             \"Precision\": precision,\n",
-    "            #             \"Recall\": recall,\n",
-    "            #             \"Data_Split\": evaluation_type,\n",
-    "            #             \"Shuffled\": \"shuffled\" in model_type,\n",
-    "            #             \"Feature_Type\": feature_type\n",
-    "            #         }\n",
-    "            #     )\n",
-    "            # )\n",
+    "            PR_data.append(\n",
+    "                pd.DataFrame(\n",
+    "                    {\n",
+    "                        \"Model_Class\": model_class,\n",
+    "                        \"PR_Threshold\": thresholds,\n",
+    "                        \"Precision\": precision,\n",
+    "                        \"Recall\": recall,\n",
+    "                        \"Data_Split\": evaluation_type,\n",
+    "                        \"Shuffled\": \"shuffled\" in model_type,\n",
+    "                        \"Feature_Type\": feature_type\n",
+    "                    }\n",
+    "                )\n",
+    "            )\n",
     "\n",
-    "    # only label outer plots\n",
-    "    for ax in axs.flat:\n",
-    "        ax.label_outer()\n",
+    "    # # only label outer plots\n",
+    "    # for ax in axs.flat:\n",
+    "    #     ax.label_outer()\n",
     "\n",
-    "    # add title to figure with all subplots\n",
-    "    fig.suptitle(f\"PR curves for {model_type} models\")\n",
-    "    # add legend to figure with all subplots\n",
-    "    handles, labels = ax.get_legend_handles_labels()\n",
-    "    fig.legend(handles, labels, loc='upper right')\n",
-    "    plt.show()\n",
+    "    # # add title to figure with all subplots\n",
+    "    # fig.suptitle(f\"PR curves for {model_type} models\")\n",
+    "    # # add legend to figure with all subplots\n",
+    "    # handles, labels = ax.get_legend_handles_labels()\n",
+    "    # fig.legend(handles, labels, loc='upper right')\n",
+    "    # plt.show()\n",
     "    \n",
     "    \n",
     "\n",
