--- a/3.evaluate_model/class_PR_curves.ipynb
+++ b/3.evaluate_model/class_PR_curves.ipynb
@@ -432,7 +432,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ADCCM</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.033306</td>\n",
        "      <td>1.0</td>\n",
        "      <td>train</td>\n",
@@ -442,7 +442,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ADCCM</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.033320</td>\n",
        "      <td>1.0</td>\n",
        "      <td>train</td>\n",
@@ -452,7 +452,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>ADCCM</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.033333</td>\n",
        "      <td>1.0</td>\n",
        "      <td>train</td>\n",
@@ -462,7 +462,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>ADCCM</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.033347</td>\n",
        "      <td>1.0</td>\n",
        "      <td>train</td>\n",
@@ -472,7 +472,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>ADCCM</td>\n",
-       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.033361</td>\n",
        "      <td>1.0</td>\n",
        "      <td>train</td>\n",
@@ -490,9 +490,9 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>257755</th>\n",
+       "      <th>257575</th>\n",
        "      <td>SmallIrregular</td>\n",
-       "      <td>426</td>\n",
+       "      <td>0.122979</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>test</td>\n",
@@ -500,9 +500,9 @@
        "      <td>DP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>257756</th>\n",
+       "      <th>257576</th>\n",
        "      <td>SmallIrregular</td>\n",
-       "      <td>427</td>\n",
+       "      <td>0.124633</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>test</td>\n",
@@ -510,9 +510,9 @@
        "      <td>DP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>257757</th>\n",
+       "      <th>257577</th>\n",
        "      <td>SmallIrregular</td>\n",
-       "      <td>428</td>\n",
+       "      <td>0.128889</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>test</td>\n",
@@ -520,9 +520,9 @@
        "      <td>DP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>257758</th>\n",
+       "      <th>257578</th>\n",
        "      <td>SmallIrregular</td>\n",
-       "      <td>429</td>\n",
+       "      <td>0.130976</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>test</td>\n",
@@ -530,10 +530,10 @@
        "      <td>DP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>257759</th>\n",
+       "      <th>257579</th>\n",
        "      <td>SmallIrregular</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.14434</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>test</td>\n",
        "      <td>True</td>\n",
@@ -541,22 +541,22 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>257760 rows × 7 columns</p>\n",
+       "<p>257580 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       Phenotypic_Class PR_Threshold  Precision  Recall data_split  shuffled  \\\n",
-       "0                 ADCCM            0   0.033306     1.0      train     False   \n",
-       "1                 ADCCM            1   0.033320     1.0      train     False   \n",
-       "2                 ADCCM            2   0.033333     1.0      train     False   \n",
-       "3                 ADCCM            3   0.033347     1.0      train     False   \n",
-       "4                 ADCCM            4   0.033361     1.0      train     False   \n",
+       "0                 ADCCM          0.0   0.033306     1.0      train     False   \n",
+       "1                 ADCCM          0.0   0.033320     1.0      train     False   \n",
+       "2                 ADCCM          0.0   0.033333     1.0      train     False   \n",
+       "3                 ADCCM          0.0   0.033347     1.0      train     False   \n",
+       "4                 ADCCM          0.0   0.033361     1.0      train     False   \n",
        "...                 ...          ...        ...     ...        ...       ...   \n",
-       "257755   SmallIrregular          426   0.000000     0.0       test      True   \n",
-       "257756   SmallIrregular          427   0.000000     0.0       test      True   \n",
-       "257757   SmallIrregular          428   0.000000     0.0       test      True   \n",
-       "257758   SmallIrregular          429   0.000000     0.0       test      True   \n",
-       "257759   SmallIrregular         None   1.000000     0.0       test      True   \n",
+       "257575   SmallIrregular     0.122979   0.000000     0.0       test      True   \n",
+       "257576   SmallIrregular     0.124633   0.000000     0.0       test      True   \n",
+       "257577   SmallIrregular     0.128889   0.000000     0.0       test      True   \n",
+       "257578   SmallIrregular     0.130976   0.000000     0.0       test      True   \n",
+       "257579   SmallIrregular      0.14434   0.000000     0.0       test      True   \n",
        "\n",
        "       feature_type  \n",
        "0                CP  \n",
@@ -565,13 +565,13 @@
        "3                CP  \n",
        "4                CP  \n",
        "...             ...  \n",
-       "257755           DP  \n",
-       "257756           DP  \n",
-       "257757           DP  \n",
-       "257758           DP  \n",
-       "257759           DP  \n",
+       "257575           DP  \n",
+       "257576           DP  \n",
+       "257577           DP  \n",
+       "257578           DP  \n",
+       "257579           DP  \n",
        "\n",
-       "[257760 rows x 7 columns]"
+       "[257580 rows x 7 columns]"
       ]
      },
      "execution_count": 4,
@@ -581,7 +581,8 @@
    ],
    "source": [
     "# compile list of tidy data into one dataframe\n",
-    "compiled_class_PR_curves = pd.concat(compiled_class_PR_curves).reset_index(drop=True)\n",
+    "# some thresholds are None because last PR value doesnt correspond to cell dataset (these values are always P=1, R=0), remove these rows from PR data\n",
+    "compiled_class_PR_curves = pd.concat(compiled_class_PR_curves).dropna().reset_index(drop=True)\n",
     "\n",
     "# specify results directory\n",
     "PR_curves_dir = pathlib.Path(\"evaluations/precision_recall_curves/\")\n",
@@ -679,7 +680,7 @@
     "        phenotypic_class_index = phenotypic_classes.tolist().index(phenotypic_class)\n",
     "\n",
     "        # plot PR curves for single class models of this model type\n",
-    "        # this function also returns the PR curve data in \n",
+    "        # this function also returns the PR curve data for this model type\n",
     "        PR_data = class_PR_curves_SCM(\n",
     "            single_cell_data,\n",
     "            single_class_model,\n",
@@ -729,9 +730,9 @@
        "      <th>PR_Threshold</th>\n",
        "      <th>Precision</th>\n",
        "      <th>Recall</th>\n",
-       "      <th>Data_Split</th>\n",
-       "      <th>Shuffled</th>\n",
-       "      <th>Feature_Type</th>\n",
+       "      <th>data_split</th>\n",
+       "      <th>shuffled</th>\n",
+       "      <th>feature_type</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -851,7 +852,7 @@
        "</div>"
       ],
       "text/plain": [
-       "       Model_Class PR_Threshold  Precision    Recall Data_Split  Shuffled  \\\n",
+       "       Model_Class PR_Threshold  Precision    Recall data_split  shuffled  \\\n",
        "0            Large     0.022742   0.500000  1.000000      train     False   \n",
        "1            Large     0.030259   0.503759  1.000000      train     False   \n",
        "2            Large     0.035568   0.507576  1.000000      train     False   \n",
@@ -864,7 +865,7 @@
        "135408  OutOfFocus     0.736165   0.000000  0.000000       test      True   \n",
        "135409  OutOfFocus     0.777202   0.000000  0.000000       test      True   \n",
        "\n",
-       "       Feature_Type  \n",
+       "       feature_type  \n",
        "0                CP  \n",
        "1                CP  \n",
        "2                CP  \n",
