rerun multiclass model

--- a/3.evaluate_model/class_PR_curves.ipynb
+++ b/3.evaluate_model/class_PR_curves.ipynb
@@ -24,7 +24,7 @@
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
     "from train_utils import get_dataset\n",
-    "from evaluate_utils import class_PR_curves, class_PR_curves_SCM"
+    "from evaluate_utils import class_PR_curves, class_PR_curves_SCM\n"
    ]
   },
   {
@@ -44,14 +44,14 @@
     "data_split_path = pathlib.Path(\"../1.split_data/indexes/data_split_indexes.tsv\")\n",
     "data_split_indexes = pd.read_csv(data_split_path, sep=\"\\t\", index_col=0)\n",
     "features_dataframe_path = pathlib.Path(\"../0.download_data/data/labeled_data.csv.gz\")\n",
-    "features_dataframe = get_features_data(features_dataframe_path)\n"
+    "features_dataframe = get_features_data(features_dataframe_path)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluate Each Model on Each Dataset\n"
+    "### Evaluate each model on each dataset (multiclass)\n"
    ]
   },
   {
@@ -383,14 +383,14 @@
     "        PR_data[\"feature_type\"] = feature_type\n",
     "\n",
     "        # add this score data to the tidy scores compiling list\n",
-    "        compiled_class_PR_curves.append(PR_data)\n"
+    "        compiled_class_PR_curves.append(PR_data)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save PR curves from each evaluation\n"
+    "### Save PR curves from each evaluation (multiclass)\n"
    ]
   },
   {
@@ -582,7 +582,9 @@
    "source": [
     "# compile list of tidy data into one dataframe\n",
     "# some thresholds are None because last PR value doesnt correspond to cell dataset (these values are always P=1, R=0), remove these rows from PR data\n",
-    "compiled_class_PR_curves = pd.concat(compiled_class_PR_curves).dropna().reset_index(drop=True)\n",
+    "compiled_class_PR_curves = (\n",
+    "    pd.concat(compiled_class_PR_curves).dropna().reset_index(drop=True)\n",
+    ")\n",
     "\n",
     "# specify results directory\n",
     "PR_curves_dir = pathlib.Path(\"evaluations/precision_recall_curves/\")\n",
@@ -598,6 +600,13 @@
     "\n",
     "# preview tidy data\n",
     "compiled_class_PR_curves"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate each model on each dataset (multiclass)\n"
    ]
   },
   {
@@ -670,12 +679,12 @@
     "            f\"{single_class_models_dir}/{phenotypic_class}_models/{model_type}__{feature_type}.joblib\"\n",
     "        )\n",
     "        single_class_model = load(single_class_model_path)\n",
-    "        \n",
+    "\n",
     "        # load single cell data that will be used for evaluation\n",
     "        single_cell_data = get_dataset(\n",
     "            features_dataframe, data_split_indexes, evaluation_type\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        # index of phenotypic_class gives us an idea of where it should be plotted\n",
     "        phenotypic_class_index = phenotypic_classes.tolist().index(phenotypic_class)\n",
     "\n",
@@ -691,13 +700,20 @@
     "            model_type,\n",
     "            feature_type,\n",
     "            evaluation_type,\n",
-    "            phenotypic_class\n",
+    "            phenotypic_class,\n",
     "        )\n",
     "        compiled_SCM_PR_data.append(PR_data)\n",
     "\n",
     "    # add title to figure with all subplots\n",
     "    fig.suptitle(f\"PR curves for {model_type} models\")\n",
-    "    plt.show()\n"
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save PR curves from each evaluation (multiclass)\n"
    ]
   },
   {
@@ -889,16 +905,16 @@
    "source": [
     "# compile tidy PR data\n",
     "# some thresholds are None because last PR value doesnt correspond to cell dataset (these values are always P=1, R=0), remove these rows from PR data\n",
-    "compiled_SCM_PR_data = pd.concat(compiled_SCM_PR_data, axis=0).dropna().reset_index(drop=True)\n",
+    "compiled_SCM_PR_data = (\n",
+    "    pd.concat(compiled_SCM_PR_data, axis=0).dropna().reset_index(drop=True)\n",
+    ")\n",
     "\n",
     "# specify results directory\n",
     "PR_curves_dir = pathlib.Path(\"evaluations/precision_recall_curves/\")\n",
     "PR_curves_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# define save path\n",
-    "compiled_PR_data_save_path = pathlib.Path(\n",
-    "    f\"{PR_curves_dir}/compiled_SCM_PR_curves.tsv\"\n",
-    ")\n",
+    "compiled_PR_data_save_path = pathlib.Path(f\"{PR_curves_dir}/compiled_SCM_PR_curves.tsv\")\n",
     "\n",
     "# save data as tsv\n",
     "compiled_SCM_PR_data.to_csv(compiled_PR_data_save_path, sep=\"\\t\")\n",
