add changes from last PR

--- a/3.evaluate_model/class_PR_curves.ipynb
+++ b/3.evaluate_model/class_PR_curves.ipynb
@@ -527,7 +527,7 @@
    ],
    "source": [
     "# compile list of tidy data into one dataframe\n",
-    "# some thresholds are None because last PR value doesnt correspond to cell dataset (these values are always P=1, R=0), remove these rows from PR data\n",
+    "# some thresholds are None because last PR value doesn't correspond to cell dataset (these values are always P=1, R=0), remove these rows from PR data\n",
     "compiled_class_PR_curves = (\n",
     "    pd.concat(compiled_class_PR_curves).dropna().reset_index(drop=True)\n",
     ")\n",
@@ -610,7 +610,6 @@
     "# iterate over each model type\n",
     "# this is not included in itertools product because the PR curves figure needs to be generated for each model type with plt.show()\n",
     "for model_type in model_types:\n",
-    "\n",
     "    # create a figure that has 6x5 subplots\n",
     "    fig, axs = plt.subplots(6, 5)\n",
     "    fig.set_size_inches(15, 18)\n",
@@ -850,7 +849,7 @@
    ],
    "source": [
     "# compile tidy PR data\n",
-    "# some thresholds are None because last PR value doesnt correspond to cell dataset (these values are always P=1, R=0), remove these rows from PR data\n",
+    "# some thresholds are None because last PR value doesn't correspond to cell dataset (these values are always P=1, R=0), remove these rows from PR data\n",
     "compiled_SCM_PR_data = (\n",
     "    pd.concat(compiled_SCM_PR_data, axis=0).dropna().reset_index(drop=True)\n",
     ")\n",
