--- a/3.evaluate_model/F1_scores.ipynb
+++ b/3.evaluate_model/F1_scores.ipynb
@@ -678,7 +678,7 @@
     "        single_cell_data = get_dataset(\n",
     "            features_dataframe, data_split_indexes, evaluation_type\n",
     "        )\n",
-    "        # rename negative labels and downsample negative lables if we are evaluating on training data\n",
+    "        # rename negative labels and downsample negative labels if we are evaluating on training data\n",
     "        single_cell_data = get_SCM_model_data(\n",
     "            single_cell_data, phenotypic_class, evaluation_type\n",
     "        )\n",
