--- a/3.evaluate_model/get_LOIO_probabilities.ipynb
+++ b/3.evaluate_model/get_LOIO_probabilities.ipynb
@@ -325,9 +325,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Performing LOIO for feature type CP with parameters C: 1.0, l1_ratio: 0.30000000000000004\n",
-      "Performing LOIO for feature type CP_and_DP with parameters C: 0.1, l1_ratio: 0.30000000000000004\n",
-      "Performing LOIO for feature type DP with parameters C: 1.0, l1_ratio: 1.0\n"
+      "Performing LOIO for feature type CP with parameters C: 1.0, l1_ratio: 0.30000000000000004\n"
      ]
     }
    ],
@@ -407,11 +405,7 @@
     "        test_cells_wide_data = pd.concat([metadata_dataframe, probas_dataframe], axis=1)\n",
     "\n",
     "        # add tidy long data to compiled data\n",
-    "        compiled_LOIO_wide_data.append(test_cells_wide_data)\n",
-    "    \n",
-    "        break\n",
-    "    #break\n",
-    "\n"
+    "        compiled_LOIO_wide_data.append(test_cells_wide_data)"
    ]
   },
   {
@@ -423,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +787,6 @@
     "    single_class_model_path = pathlib.Path(\n",
     "            f\"{models_dir}/{phenotypic_class}_models/{model_type}__{feature_type}.joblib\"\n",
     "        )\n",
-    "    print(single_class_model_path)\n",
     "\n",
     "    # load the model\n",
     "    model = load(single_class_model_path)\n",
@@ -863,10 +856,7 @@
     "        test_cells_wide_data = pd.concat([metadata_dataframe, probas_dataframe], axis=1)\n",
     "\n",
     "        # add tidy long data to compiled data\n",
-    "        compiled_LOIO_wide_data.append(test_cells_wide_data)\n",
-    "        \n",
-    "        break\n",
-    "    #break\n"
+    "        compiled_LOIO_wide_data.append(test_cells_wide_data)\n"
    ]
   },
   {
@@ -878,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
