compare model coefficients

--- a/3.evaluate_model/get_model_predictions.ipynb
+++ b/3.evaluate_model/get_model_predictions.ipynb
@@ -25,7 +25,7 @@
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
     "from train_utils import get_dataset, get_X_y_data\n",
-    "from evaluate_utils import get_SCM_model_data"
+    "from evaluate_utils import get_SCM_model_data\n"
    ]
   },
   {
@@ -45,7 +45,7 @@
     "data_split_path = pathlib.Path(\"../1.split_data/indexes/data_split_indexes.tsv\")\n",
     "data_split_indexes = pd.read_csv(data_split_path, sep=\"\\t\", index_col=0)\n",
     "features_dataframe_path = pathlib.Path(\"../0.download_data/data/labeled_data.csv.gz\")\n",
-    "features_dataframe = get_features_data(features_dataframe_path)\n"
+    "features_dataframe = get_features_data(features_dataframe_path)"
    ]
   },
   {
@@ -125,7 +125,7 @@
     "            }\n",
     "        )\n",
     "\n",
-    "        compiled_predictions.append(predictions_df)"
+    "        compiled_predictions.append(predictions_df)\n"
    ]
   },
   {
@@ -321,14 +321,14 @@
     "compiled_predictions.to_csv(compiled_predictions_save_path, sep=\"\\t\")\n",
     "\n",
     "# preview compiled predictions\n",
-    "compiled_predictions\n"
+    "compiled_predictions"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get Each Model Predictions on Each Dataset (Single Class Models)"
+    "### Get Each Model Predictions on Each Dataset (Single Class Models)\n"
    ]
   },
   {
@@ -531,7 +531,10 @@
     "compiled_predictions = []\n",
     "\n",
     "# define combinations to test over\n",
-    "model_types = [\"final\", \"shuffled_baseline\"] # only perform LOIO with hyper params from final models so skip shuffled_baseline models\n",
+    "model_types = [\n",
+    "    \"final\",\n",
+    "    \"shuffled_baseline\",\n",
+    "]  # only perform LOIO with hyper params from final models so skip shuffled_baseline models\n",
     "feature_types = [\"CP\", \"DP\", \"CP_and_DP\"]\n",
     "evaluation_types = [\"train\", \"test\"]\n",
     "phenotypic_classes = features_dataframe[\"Mitocheck_Phenotypic_Class\"].unique()\n",
@@ -545,20 +548,20 @@
     "        f\"{models_dir}/{phenotypic_class}_models/{model_type}__{feature_type}.joblib\"\n",
     "    )\n",
     "    model = load(single_class_model_path)\n",
-    "    \n",
+    "\n",
     "    print(\n",
-    "            f\"Getting predictions for {phenotypic_class} model: {model_type}, trained with features: {feature_type}, on dataset: {evaluation_type}\"\n",
-    "        )\n",
-    "    \n",
+    "        f\"Getting predictions for {phenotypic_class} model: {model_type}, trained with features: {feature_type}, on dataset: {evaluation_type}\"\n",
+    "    )\n",
+    "\n",
     "    # load dataset (train, test, etc)\n",
     "    data = get_SCM_model_data(features_dataframe, phenotypic_class, evaluation_type)\n",
-    "    \n",
+    "\n",
     "    # get features and labels dataframe\n",
     "    X, y = get_X_y_data(data, feature_type)\n",
-    "    \n",
+    "\n",
     "    # get predictions from model\n",
     "    y_pred = model.predict(X)\n",
-    "    \n",
+    "\n",
     "    # create dataframe with dataset index of cell being predicted,\n",
     "    # predicted phenotypic class,\n",
     "    # true phenotypic class,\n",
@@ -581,7 +584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compile and Save Predictions"
+    "### Compile and Save Predictions\n"
    ]
   },
   {
@@ -763,14 +766,16 @@
     "compiled_predictions = pd.concat(compiled_predictions).reset_index(drop=True)\n",
     "\n",
     "# specify save path\n",
-    "compiled_predictions_save_path = pathlib.Path(\"predictions/compiled_SCM_predictions.tsv\")\n",
+    "compiled_predictions_save_path = pathlib.Path(\n",
+    "    \"predictions/compiled_SCM_predictions.tsv\"\n",
+    ")\n",
     "compiled_predictions_save_path.parent.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# save data as tsv\n",
     "compiled_predictions.to_csv(compiled_predictions_save_path, sep=\"\\t\")\n",
     "\n",
     "# preview compiled predictions\n",
-    "compiled_predictions\n"
+    "compiled_predictions"
    ]
   }
  ],
