--- a/4.interpret_model/interpret_model_coefficients.ipynb
+++ b/4.interpret_model/interpret_model_coefficients.ipynb
@@ -23,7 +23,7 @@
     "import numpy as np\n",
     "\n",
     "sys.path.append(\"../utils\")\n",
-    "from split_utils import get_features_data\n"
+    "from split_utils import get_features_data"
    ]
   },
   {
@@ -42,7 +42,7 @@
     "# load labeled data\n",
     "labeled_data_path = pathlib.Path(\"../0.download_data/data/labeled_data.csv.gz\")\n",
     "labeled_data = get_features_data(labeled_data_path)\n",
-    "#labeled_data"
+    "# labeled_data"
    ]
   },
   {
@@ -468,14 +468,14 @@
     "    plt.title(\"Coefficient vs Phenotypic Class\")\n",
     "    plt.xticks(rotation=90)\n",
     "    ax = sns.barplot(data=pheno_class_ordered)\n",
-    "    plt.show()"
+    "    plt.show()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save multi class model coefficients"
+    "### Save multi class model coefficients\n"
    ]
   },
   {
@@ -649,7 +649,9 @@
     "coefficients_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# define save path\n",
-    "compiled_coefficients_save_path = pathlib.Path(f\"{coefficients_dir}/compiled_coefficients.tsv\")\n",
+    "compiled_coefficients_save_path = pathlib.Path(\n",
+    "    f\"{coefficients_dir}/compiled_coefficients.tsv\"\n",
+    ")\n",
     "\n",
     "# save data as tsv\n",
     "compiled_coefficients.to_csv(compiled_coefficients_save_path, sep=\"\\t\")\n",
